tests/assembler/pass/test27.ial
type S
{
}

type R
{
    field instance S& s;
    field instance S&* s2;
}
