tests/assembler/fail/test15.ial
type S
{
    field instance S s;
}
